[project]
name = "sage-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.4",
    "crewai>=1.6.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "llama-index>=0.14.8",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
